--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
           chat_id: ${{ secrets.TELEGRAM_CHAT_ID }}
           thread_id: ${{ secrets.TELEGRAM_THREAD_ID }}
           message: |
-            🔔 Branch updated: `$GITHUB_REF`
+            🔔 Branch updated: $GITHUB_REF
             Repository: $GITHUB_REPOSITORY
             Commit: $GITHUB_SHA
