--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,16 @@
-name: Notify Telegram
+name: Notify Telegram on Merged PR
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
-      - '**'
+      - main
+      - demo
+      - prod
 
 jobs:
   notify:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -17,6 +21,8 @@ jobs:
           chat_id: ${{ secrets.TELEGRAM_CHAT_ID }}
           thread_id: ${{ secrets.TELEGRAM_THREAD_ID }}
           message: |
-            🔔 Branch updated: $GITHUB_REF
-            Repository: $GITHUB_REPOSITORY
-            Commit: $GITHUB_SHA
+            ✅ PR Merged: ${{ github.event.pull_request.title }}
+            👤 Author: ${{ github.event.pull_request.user.login }}
+            🔀 From: ${{ github.event.pull_request.head.ref }}
+            👉 Into: ${{ github.event.pull_request.base.ref }}
+            🔗 URL: ${{ github.event.pull_request.html_url }}
