--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,17 @@ jobs:
           if [ "${{ github.event_name }}" = "push" ]; then
             commit_message=$(git log -1 --pretty=%B)
             echo "MESSAGE<<EOF" >> $GITHUB_OUTPUT
-            echo "🚀 Push to branch: ${{ github.ref_name }}" >> $GITHUB_OUTPUT
-            echo "📦 Repository: ${{ github.repository }}" >> $GITHUB_OUTPUT
-            echo "📝 Commit message: $commit_message" >> $GITHUB_OUTPUT
-            echo "🔗 Commit: https://github.com/${{ github.repository }}/commit/${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "🚀 ПРЯМОЙ ПУШ В ВЕТКУ: ${{ github.ref_name }}" >> $GITHUB_OUTPUT
+            echo "📝 Текст Коммита: $commit_message" >> $GITHUB_OUTPUT
+            echo "🔗 Ссылка на Коммит: https://github.com/${{ github.repository }}/commit/${{ github.sha }}" >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           elif [ "${{ github.event_name }}" = "pull_request" ] && [ "${{ github.event.pull_request.merged }}" = "true" ]; then
             echo "MESSAGE<<EOF" >> $GITHUB_OUTPUT
-            echo "✅ Merged PR: ${{ github.event.pull_request.title }}" >> $GITHUB_OUTPUT
-            echo "👤 Author: ${{ github.event.pull_request.user.login }}" >> $GITHUB_OUTPUT
-            echo "🔀 From: ${{ github.event.pull_request.head.ref }}" >> $GITHUB_OUTPUT
-            echo "👉 Into: ${{ github.event.pull_request.base.ref }}" >> $GITHUB_OUTPUT
-            echo "🔗 URL: ${{ github.event.pull_request.html_url }}" >> $GITHUB_OUTPUT
+            echo "✅ ОБНОВЛЕНИЕ: ${{ github.event.pull_request.title }}" >> $GITHUB_OUTPUT
+            echo "👤 Автор: ${{ github.event.pull_request.user.login }}" >> $GITHUB_OUTPUT
+            echo "🔀 Из Ветки: ${{ github.event.pull_request.head.ref }}" >> $GITHUB_OUTPUT
+            echo "👉 В Ветку: ${{ github.event.pull_request.base.ref }}" >> $GITHUB_OUTPUT
+            echo "🔗 ССылка на ПулРеквест: ${{ github.event.pull_request.html_url }}" >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           else
             echo "No relevant action, skipping." >> $GITHUB_STEP_SUMMARY
