--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
         id: prepare
         run: |
           echo "MESSAGE<<EOF" >> $GITHUB_OUTPUT
-          echo "✅ ОБНОВЛЕНИЕ: ${{ github.event.pull_request.title }}" >> $GITHUB_OUTPUT
+          echo "👉✅ ОБНОВЛЕНА ВЕТКА: ${{ github.event.pull_request.base.ref }}" >> $GITHUB_OUTPUT
+          echo "✏️ Что Обновлено: ${{ github.event.pull_request.title }}" >> $GITHUB_OUTPUT
           echo "👤 Автор: ${{ github.event.pull_request.user.login }}" >> $GITHUB_OUTPUT
           echo "🔀 Из Ветки: ${{ github.event.pull_request.head.ref }}" >> $GITHUB_OUTPUT
-          echo "👉 В Ветку: ${{ github.event.pull_request.base.ref }}" >> $GITHUB_OUTPUT
-          echo "🔗 ССылка на ПулРеквест: ${{ github.event.pull_request.html_url }}" >> $GITHUB_OUTPUT
+          echo "🔗 Ссылка на ПулРеквест: ${{ github.event.pull_request.html_url }}" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Send Telegram Notification
