--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Prepare message
         id: prepare
         run: |
-          echo "MESSAGE<<EOF" >> $GITHUB_OUTPUT
-          echo "✅ ОБНОВЛЕНА ВЕТКА: ${{ github.event.pull_request.base.ref }}" >> $GITHUB_OUTPUT          
-          echo "✏️ Что Обновлено: ${{ github.event.pull_request.title }}" >> $GITHUB_OUTPUT
-          echo "👤 Автор: ${{ github.event.pull_request.user.login }}" >> $GITHUB_OUTPUT
-          echo "🔀 Из Ветки: ${{ github.event.pull_request.head.ref }}" >> $GITHUB_OUTPUT
-          echo "🔗 Ссылка на ПулРеквест: ${{ github.event.pull_request.html_url }}" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          {
+            echo "MESSAGE<<EOF"
+            echo "✅ ОБНОВЛЕНА ВЕТКА: ${{ github.event.pull_request.base.ref }}"
+            echo "✏️ Что Обновлено: ${{ github.event.pull_request.title }}"
+            echo "👤 Автор: ${{ github.event.pull_request.user.login }}"
+            echo "🔀 Из Ветки: ${{ github.event.pull_request.head.ref }}"
+            echo "🔗 Ссылка на ПулРеквест: ${{ github.event.pull_request.html_url }}"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
 
       - name: Send Telegram Notification
         uses: toprogramm/telegram-notifier@latest
